# bean-lens

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dictionary-auto-pr.yml  dictionary-term-apply.yml
api/: extraction_logging.py  index.py  requirements.txt
data/imports/beanconqueror/: flavor_aliases.json  flavor_terms.json  roast_aliases.json
data/review/: alias_candidates.auto.json  approved_term_candidates.example.json  unknown_queue_weekly.md
postman/: bean-lens-api.postman_collection.json
receiver_app/: main.py  requirements.txt
receiver_app/api/: index.py
scripts/: apply_dictionary_candidates.py  apply_term_candidates.py  export_openapi_yaml.py  generate_alias_candidates.py  generate_new_term_candidates.py  import_beanconqueror.py  summarize_unknown_queue.py  validate_dictionary_data.py  weekly_unknown_queue_report.py
src/bean_lens/: __init__.py  cli.py  core.py  exceptions.py  schema.py
src/bean_lens/normalization/: __init__.py  engine.py  repository.py  types.py
src/bean_lens/normalization/data/: __init__.py
src/bean_lens/normalization/data/v1/: __init__.py  aliases.json  aliases.py  terms.json  terms.py
src/bean_lens/normalization/data/v2/: __init__.py  aliases.py  terms.json  terms.py
src/bean_lens/providers/: __init__.py  base.py  gemini.py  google_vision_ocr.py
tests/: __init__.py  test_core.py  test_google_vision_ocr_provider.py  test_schema.py
tests/normalization/: test_engine.py
